samples/_failures_safe/1761458604_e27d1c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a6ba573a.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_a6ba573a.c:176: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_a6ba573a.c:175:5: error: expected declaration or statement at end of input
  175 |     if
      |     ^~
